--- a/.github/workflows/prisma-migrate.yml
+++ b/.github/workflows/prisma-migrate.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   migrate:
     runs-on: ubuntu-latest
-
+    environment: develop
     env:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
